gloo/aws-virtual-service.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: aws-lambda-service
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - 'lambda.localtest.me'
    routes:
      - matchers:
          - prefix: /hello-transform
        routeAction:
          single:
            destinationSpec:
              aws:
                logicalName: hello-world:3
                responseTransformation: true
            upstream:
              name: aws-upstream
              namespace: gloo-system
      - matchers:
          - prefix: /hello
        routeAction:
          single:
            destinationSpec:
              aws:
                logicalName: hello-world:2
                responseTransformation: false
            upstream:
              name: aws-upstream
              namespace: gloo-system
