gloo/echo-virtual-service.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: regex
  namespace: gloo-system
spec:
  displayName: regex
  virtualHost:
    domains:
    - 'regex.localtest.me'
    routes:
    - matchers:
      - prefix: /404
      routeAction:
        single:
          kube:
            ref:
              name: echo-service-read
              namespace: echo
            port: 8080
      options:
        regexRewrite:
          pattern:
            regex: '/404'
          substitution: '/xxx.html'
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo-read
  namespace: gloo-system
spec:
  displayName: echo-read
  virtualHost:
    domains:
    - 'echo-read.localtest.me'
    routes:
    - matchers:
      - prefix: /read
      routeAction:
        single:
          kube:
            ref:
              name: echo-service-read
              namespace: echo
            port: 8080
      options:
        prefixRewrite: /
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo-write
  namespace: gloo-system
spec:
  displayName: echo-write
  virtualHost:
    domains:
    - 'echo-write.localtest.me'
    routes:
    - matchers:
      - prefix: /write
      routeAction:
        single:
          kube:
            ref:
              name: echo-service-write
              namespace: echo
            port: 8081
      options:
        prefixRewrite: /echo-write
